# enchat

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Peer.h  QJsonHelper.h  README.md  app_config.cpp  app_config.h  cfg.json  chat_client.cpp  chatcallback.cpp  chatcallback.h  chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h  chatsession.cpp  chatsession.h  main.cpp  mbedtls.hpp  socketsession.cpp  socketsession.h  vcpkg.json
crypto/: build_info.h  chacha20.c  chachapoly.c  error.c  platform.c  platform_util.c  platform_util.h  poly1305.c
curve25519/: CMakeLists.txt
curve25519/boringssl/: curve25519.c  curve25519.h  internal.h
xlog/: CMakeLists.txt  XLog.cpp  XLog.h  daily_filechacha_sink.h  filehelper_chacha.cpp  filehelper_chacha.h
xlog/spdlog-1.12.0/include/spdlog/details/: chacha20.c.bak  chacha20.h.bak  file_helper_chacha20-inl.h  file_helper_chacha20.h
xlog/spdlog-1.12.0/include/spdlog/sinks/: apple_unifiedlog_sink.h  daily_file_sink.h  windebug_sink.h
